[package]
name = "libdogecoin-rs"
version = "0.0.4"
edition = "2021"
description = "Safe Rust bindings for libdogecoin - wallet, transaction, HD wallet, and mnemonic support"
license = "MIT"
repository = "https://github.com/libdogecoin/libdogecoin-rs"
keywords = ["dogecoin", "cryptocurrency", "wallet", "blockchain"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["rpc"]
rpc = ["dep:serde", "dep:serde_json", "dep:ureq", "dep:base64"]

[dependencies]
libdogecoin-sys = { path = "../libdogecoin-sys" }
thiserror = "1.0"
zeroize = { version = "1.7", features = ["std"] }

# RPC (optional, enabled by default via the `rpc` feature)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
ureq = { version = "2.10", features = ["json"], optional = true }
base64 = { version = "0.22", optional = true }
